Fixed overflow issue with mobile menu

--- a/css/queries.css
+++ b/css/queries.css
@@ -4,10 +4,6 @@
 
 /* @media (max-width: 48em) { */
 @media (max-width: 56.75em) {
-  header .nav-list {
-    display: none;
-  }
-
   .btn-mobile-nav {
     display: block;
   }
@@ -89,19 +85,19 @@
   }
 
   .header-nav {
-    /* background-color: rgba(255, 255, 255, 0.9); */
     background-color: rgb(37, 60, 108, 0.9);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
     position: absolute;
     inset: 0;
+    width: 100%;
     height: 100vh;
-    transform: translateX(100%);
+    /* transform: translateX(100%); */
 
     display: flex;
     align-items: center;
     justify-content: center;
-    /* transition: all 0.3s ease-in; */
+    transition: all 0.3s ease-in;
 
     /* 1) Hide it visually */
     opacity: 0;
